Refactoring for remaining Expense APIs